--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,15 @@ dnspython==2.7.0
 email_validator==2.2.0
 fastapi==0.115.12
 fastapi-cli==0.0.7
+google-api-core==2.24.2
 google-auth==2.40.2
 google-genai==1.17.0
+google-geo-type==0.3.12
+google-maps-places==0.2.1
+googleapis-common-protos==1.70.0
+googlemaps==4.10.0
+grpcio==1.73.0rc1
+grpcio-status==1.73.0rc1
 h11==0.16.0
 httpcore==1.0.9
 httptools==0.6.4
@@ -19,6 +26,8 @@ Jinja2==3.1.6
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+proto-plus==1.26.1
+protobuf==6.31.1
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pydantic==2.11.5
