--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 annotated-types==0.7.0
 anyio==4.9.0
+bcrypt==4.3.0
 cachetools==5.5.2
 certifi==2025.4.26
 charset-normalizer==3.4.2
@@ -8,6 +9,7 @@ dnspython==2.7.0
 email_validator==2.2.0
 fastapi==0.115.12
 fastapi-cli==0.0.7
+git-filter-repo==2.47.0
 google-api-core==2.24.2
 google-auth==2.40.2
 google-genai==1.17.0
@@ -26,6 +28,7 @@ Jinja2==3.1.6
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+passlib==1.7.4
 proto-plus==1.26.1
 protobuf==6.31.1
 pyasn1==0.6.1
@@ -42,6 +45,7 @@ rich-toolkit==0.14.7
 rsa==4.9.1
 shellingham==1.5.4
 sniffio==1.3.1
+SQLAlchemy==2.0.41
 starlette==0.46.2
 typer==0.16.0
 typing-inspection==0.4.1
