--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,10 @@ anyio==4.9.0
 bcrypt==4.3.0
 cachetools==5.5.2
 certifi==2025.4.26
+cffi==1.17.1
 charset-normalizer==3.4.2
 click==8.2.1
+cryptography==45.0.3
 dnspython==2.7.0
 email_validator==2.2.0
 fastapi==0.115.12
@@ -25,6 +27,7 @@ httptools==0.6.4
 httpx==0.28.1
 idna==3.10
 Jinja2==3.1.6
+jwt==1.3.1
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
@@ -33,9 +36,11 @@ proto-plus==1.26.1
 protobuf==6.31.1
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
+pycparser==2.22
 pydantic==2.11.5
 pydantic_core==2.33.2
 Pygments==2.19.1
+PyJWT==2.10.1
 python-dotenv==1.1.0
 python-multipart==0.0.20
 PyYAML==6.0.2
@@ -46,6 +51,7 @@ rsa==4.9.1
 shellingham==1.5.4
 sniffio==1.3.1
 SQLAlchemy==2.0.41
+SQLAlchemy-ImageAttach==1.1.0
 starlette==0.46.2
 typer==0.16.0
 typing-inspection==0.4.1
@@ -53,5 +59,6 @@ typing_extensions==4.13.2
 urllib3==2.4.0
 uvicorn==0.34.2
 uvloop==0.21.0
+Wand==0.6.13
 watchfiles==1.0.5
 websockets==15.0.1
